# cato-agent

./: .env.example  .gitignore  README.md  config.yaml  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  embeddings.py  llm.py
app/core/agent/: booking_agent.py  embeddings_factory.py  master.py  model_factory.py  objection_handler.py  qualifier.py  unqualified_agent.py
app/core/tools/: property_tool.py  rag_tool.py
app/db/: property_lookup.py  redis_client.py
app/graph/: graph.py  state.py
app/graph/nodes/: booking.py  classifier.py  general.py  info.py  objection.py  qualifier.py
app/memory/: episodic.py  profile.py  working.py
app/rag/: indexer.py  reranker.py  retriever.py
app/schemas/: agent_responses.py  state.py
app/static/: index.html
data/: cato_john_inputs.txt  hei_knowledge.json  objection_examples.json  properties.csv  users.csv
docs/superpowers/plans/: 2026-03-18-cato-modernization.md
docs/superpowers/specs/: 2026-03-18-cato-modernization-design.md
scripts/: cato_demo.py  chat.py  extract_objections.py  seed_mock_db.py  seed_objections.py  test_suite.py
tests/: test_config.py  test_episodic.py  test_graph.py  test_profile.py  test_retriever.py  test_working_memory.py
