[project]
name = "cato-agent"
version = "0.1.0"
description = "Cato — AI-powered home equity qualification agent"
requires-python = ">=3.12"
dependencies = [
    # Existing stack
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=0.3",
    "langchain-redis>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    # Modernization stack
    "langgraph>=0.2",
    "litellm>=1.0",
    "langfuse>=2.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "cohere>=5.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

